[package]
edition = "2021"
name = "fluid"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fast_hilbert = "2.0.0"
js-sys = "0.3.68"
kurbo = "0.10.4"
nalgebra = "0.32.4"
rstar = "0.11.0"
wasm-bindgen = "0.2.91"
web-sys = {version = "0.3.68", features = ["HtmlCanvasElement", "CanvasRenderingContext2d", "Window", "console"]}

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
# previously had just ['-O4']
wasm-opt = ['-O4', '-g']
